--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
-    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.1'
+//    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.1'
 //    implementation 'org.spring'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
